--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <div class="follower" id="follower"></div>
 
     <div class="footer" id="footerText">
-      Want to join us? Text us! <a href="mailto:contact.trainerrecords@gmail.com">contact.trainerrecords@gmail.com</a>
+      Questions? Want to join us? Text us! <a href="mailto:contact.trainerrecords@gmail.com">contact.trainerrecords@gmail.com</a>
     </div>
   </div>
 
