--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Trainer Records</title>
+  <meta name="description" content="Music Distribution, White Label, Join Today!" />
   <style>
     html, body {
       margin: 0;
@@ -218,3 +219,4 @@
   </script>
 </body>
 </html>
+
