--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <div class="follower" id="follower"></div>
 
     <div class="footer" id="footerText">
-      Questions? Want to join us? Text us! <a href="mailto:contact.trainerrecords@gmail.com">contact.trainerrecords@gmail.com</a>
+      © Trainer Records 2025 <a href="mailto:contact.trainerrecords@gmail.com">contact.trainerrecords@gmail.com</a>
     </div>
   </div>
 
@@ -219,4 +219,5 @@
   </script>
 </body>
 </html>
+
 
