--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   <div class="border-frame" id="borderFrame"></div>
 
   <div class="content" id="contentWrapper">
-    <div class="text-container pulse" id="mainText">Trainer Records LTD, 2026</div>
+    <div class="text-container pulse" id="mainText">Trainer Records</div>
     <div class="follower" id="follower"></div>
 
     <div class="footer" id="footerText">
@@ -219,6 +219,7 @@
   </script>
 </body>
 </html>
+
 
 
 
